samples/_failures_safe/1761004902_c46ec3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_755cf484.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_755cf484.c:166:5: error: expected declaration or statement at end of input
  166 |     while (queue->size > 0) {
      |     ^~~~~
./samples/SAFE/__tmp_755cf484.c:166:5: error: expected declaration or statement at end of input
